# mlir-optimizer-template

./: README.md  cookiecutter.json
foo-mlir/: CMakeLists.txt  README.md
foo-mlir/examples/: basic.mlir
foo-mlir/include/: CMakeLists.txt
foo-mlir/include/foo-mlir/Dialect/Bar/Conversion/: LowerToTarget.h  Passes.h
foo-mlir/include/foo-mlir/Dialect/Bar/IR/: Bar.td  BarBase.td  BarDialect.h  BarOps.h  BarOps.td  BarTypes.h  BarTypes.td  CMakeLists.txt
foo-mlir/include/foo-mlir/Dialect/Bar/Transforms/: ExampleTransform.h  GroupedPasses.h  Passes.h
foo-mlir/lib/Dialect/: CMakeLists.txt
foo-mlir/lib/Dialect/Bar/Conversion/: CMakeLists.txt  LowerToTarget.cpp  Passes.cpp
foo-mlir/lib/Dialect/Bar/IR/: BarBase.cpp  BarOps.cpp  CMakeLists.txt
foo-mlir/lib/Dialect/Bar/Transforms/: CMakeLists.txt  ExampleTransform.cpp  GroupedPasses.cpp  Passes.cpp
foo-mlir/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
foo-mlir/test/conversion/: lower-to-target.mlir
foo-mlir/test/dialect/: parse-print.mlir
foo-mlir/test/transforms/: example-transform.mlir
foo-mlir/tools/: CMakeLists.txt
foo-mlir/tools/foo-mlir-opt/: CMakeLists.txt  foo-mlir-opt.cpp
{{cookiecutter.project_slug}}/: CMakeLists.txt  README.md
{{cookiecutter.project_slug}}/examples/: basic.mlir
{{cookiecutter.project_slug}}/include/: CMakeLists.txt
{{cookiecutter.project_slug}}/include/{{cookiecutter.include_prefix}}/Dialect/{{cookiecutter.dialect_name}}/Conversion/: LowerToTarget.h  Passes.h
{{cookiecutter.project_slug}}/include/{{cookiecutter.include_prefix}}/Dialect/{{cookiecutter.dialect_name}}/IR/: CMakeLists.txt  {{cookiecutter.dialect_name}}.td  {{cookiecutter.dialect_name}}Base.td  {{cookiecutter.dialect_name}}Dialect.h  {{cookiecutter.dialect_name}}Ops.h  {{cookiecutter.dialect_name}}Ops.td  {{cookiecutter.dialect_name}}Types.h  {{cookiecutter.dialect_name}}Types.td
{{cookiecutter.project_slug}}/include/{{cookiecutter.include_prefix}}/Dialect/{{cookiecutter.dialect_name}}/Transforms/: ExampleTransform.h  GroupedPasses.h  Passes.h
{{cookiecutter.project_slug}}/lib/Dialect/: CMakeLists.txt
{{cookiecutter.project_slug}}/lib/Dialect/{{cookiecutter.dialect_name}}/Conversion/: CMakeLists.txt  LowerToTarget.cpp  Passes.cpp
{{cookiecutter.project_slug}}/lib/Dialect/{{cookiecutter.dialect_name}}/IR/: CMakeLists.txt  {{cookiecutter.dialect_name}}Base.cpp  {{cookiecutter.dialect_name}}Ops.cpp
{{cookiecutter.project_slug}}/lib/Dialect/{{cookiecutter.dialect_name}}/Transforms/: CMakeLists.txt  ExampleTransform.cpp  GroupedPasses.cpp  Passes.cpp
{{cookiecutter.project_slug}}/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
{{cookiecutter.project_slug}}/test/conversion/: lower-to-target.mlir
{{cookiecutter.project_slug}}/test/dialect/: parse-print.mlir
{{cookiecutter.project_slug}}/test/transforms/: example-transform.mlir
{{cookiecutter.project_slug}}/tools/: CMakeLists.txt
{{cookiecutter.project_slug}}/tools/{{cookiecutter.tool_name}}/: CMakeLists.txt  {{cookiecutter.tool_name}}.cpp
